<resources>
    <string name="app_name">Basics of Astronomy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="zvezde_tv1"> Zvezde su nebeska tela koja zrače sopstvenom svetlošću, sfernog su oblika, a sastoje se od vodonika i helijuma u stanju plazme. Zvezde su na nebu grupisana u 88 sazvežđa od kojih su najpoznatija: Veliki i mali medved, Orion, Herkules, kao i 13 zodijačkih sazvežđa. Nama najbliža zvezda posle Sunca naziva se Proksima Kentaura, a najsjanija Sirius. Možemo ih podeliti na: \n 1) superdžinove \n 2) sjajne džinove \n 3) džinove \n 4) subdžinove \n 5) zvezde glavnog niza \n 6) subpatuljci \n 7) beli patuljci \n  </string>
    <string name="zvezde_tv2"> \n Karakteristične faze u zvezdanoj evoluciji su:  \n 1) Život pre glavnog niza \n 2) Život na glavnom nizu - faza koja  najduže traje)  \n 3) Stadijum crvenog džina - faza nakon što zvezda potroši svoje gorivo i krene usled gravitacije da se sažima \n 4) Konačna faza - faza u kojoj zvezda u zavisnosti od svoje mase postaje \n - Beli patuljak \n - Neutronska zvezda \n - Crna rupa </string>
    <string name="komete_tv"> Komete su nebeska tela koja orbitiraju oko Sunca. One se sastoje iz prašine, smrznutih gasova, kamena i leda. Njihove putanje su veoma ekscentrične cak toliko da neke od njih priđu previše  blizu Suncu i zbog toga ispare, a neke odu previše daleko da zauvek napuste suncev sistem. Komete je prvi opisao Aristotel koji ih je nazivao \'zvezde sa kosom\' zbog njihovog repa. \n </string>
    <string name="planete_tv"> Planete su najmasivnija tela koja se kreću oko zvezda po eliptičnim putanjama. Za razliku od zvezda one nemaju sopstveni izvor energije tj. nemaju sopstvenu svetlost i toplotu. Smatra se da nastaju iz protoplanetarnog diska. Gas i prašina koji kruže oko protozvezde i zgušnjavaju se u rotirajući disk od koga kasnije nastaje, pod uticajem gravitacije, planeta. Još od davnina su poznati po tome što menjanju svoj svod, pa odatle su i dobile naziv. U Sunčevom sistemu ih ima 8 i dele se na unutrašnje (Merkur, Venera, Zemlja, Mars) i spoljašnje (Mars, Jupiter, Saturn, Uran i Neptun), a van njega je potvrđeno preko 110. \n </string>
    <string name="meteoridi_tv"> Meteoroidi su mala tela koja se nalaze u međuplanetarnom prostoru. Pri susretu sa Zemljom prolaze kroz atmosferu gde usled trenja sagoravaju i ostavljaju svetli trag pa su zbog toga u narodu nazivani još i zvezde \'padalice\'. Sjajni meteori nazivaju se bolidi i njih je moguce videti svako veče. Najpoznatiji meteoridi jesu Perseidi koji se cija je aktivnost najučestalija izmedju 12. i 13. avgusta kada možemo uživati u prelepom prizoru koji stvaraju. </string>
    <string name="asteroidi_tv"> Asteroidi su mala crvsta tela u koja se nalaze u planetarnim sistemima. Nastali su od planetarne materije koja se nije pripojila planetama za vreme njihovog formiranja ili dinamičkom evolucijom kometa ili nekih drugih objekata. Najčešće kruže oko matične zvezde ili kao sateliti oko većih planeta. U Sunčevom sistemu većina njih se nalazi u asteroidnom pojasu izmedju Marsa i Jupitera i u Kojplerovom pojasu iza planete Neptun. Do sada ih je otkriveno preko 170 000, a preko 11 000 je dobilo sopstvena imena. </string>
    <string name="sateliti_tv"> Satelit je nebesko telo koje kruži oko drugog nebeskog tela znatno veće mase. Satelit može biti prirodni i veštački. Prirodni sateliti prirodna nebeska tela i najčešće kruže oko planeta. Zemljin prirodni satelit je Mesec. Veštački sateliti su tela veštačkog porekla, koje je čovek lansirao u vasionu i koja najčešće orbitiraju oko planete Zemlje.  </string>
    <string name="merkur_tv1"> Oko Sunca kruže mnoga tela, a najbliže mu je sićušna planeta Merkur, osma po velicini. Merkur je planeta zemljinog tipa.Od Sunca do Merkura nam treba tri minuta i dvadesetak sekundi ako idemo brzinom svetlosti. Za to vreme prevalićemo put od oko 58 miliona kilometara jer je Merkur otprilike toliko daleko od Sunca. Pošto se kreće po eliptičnoj orbiti on je, naravno, nekad bliže. Merkur je planeta koja nema ni jedan satelit. \n </string>
    <string name="merkur_tv2"> \n Oko Sunca se okrene jednom za 88 dana (naših zemaljskih), pa znači jedna Merkurova godina traje 88 naših dana. Ali oko svoje ose Mekur se sporo okreće i na njemu od jednog do drugog izlaska Sunca prođe 176 naših dana što znači da na Merkuru dan traje duže od godine!Pošto je tako blizu Sunca danju je na Merkuru vrelo, čak 430 °C. Noći su međutim hladne i temperatura se spušta do -180°C. </string>
    <string name="merkur_tv3"> \n Magnetno polje Merkura verovatno je generisano dinamo efektom, na sličan način kao i na Zemlji (efektom kojim je magnetizovan već stvrdnuti materijal.). Za postojanje ovakvog dinamo efekta neophodno je tečno jezgo sa visokom koncentracijom  rastopljenog gvožđa. Tečno stanje jezgra i visok stepen cirkulacije elemenata u njemu posledica je jakih plimskih efekata usled visoke orbitalne ekscentričnosti planete. Magnetno polje Merkura je ipak dovoljno jako da deflektuje solarne vetrove oko planete, i na taj način formira pojas magnetosfere, koja je u stanju da zadržava plazmu iz solarnih vetrova. Upravo zbog ovog svojstva magnetosfere na površini Merkura vladaju uslovi svemirske klime. Prisustvo ovih niskoenergetskih plazmičnih elemenata utvrđeno je na tamnom delu magnetosfernog polja. </string>
    <string name="merkur_tv4"> \n Po svom sastavu Merkur spada u planete Zemljinog tipa tj. Stenovit je.Za svoju veličinu Merkur je vrlo gusta planeta, tj. građen je od čvrstog i teškog materijala i ima veliku masu spram svoje zapremine. To je otuda što Merkur ima veliko jezgro građeno od gvožđa. Osamdeset procenata ukupne mase Merkura odlazi na njegovo jezgro. </string>
    <string name="venera_tv1"> Venera je druga planeta u Sunčevom sistemu po udaljenosti od Sunca i šesta planeta po veličini. Zemljinog je tipa. Posle Sunca i Meseca to je najsjajniji objekat na nebu vidljiv sa Zemlje. Ime planete potiče iz rimske mitologije gde je Venera bilo ime za boginju lepote i ljubavi, negde se može čuti da Veneru zovu i Zemljinom sestrom. U našim krajevima je poznata kao zvezda Danica. \n </string>
    <string name="venera_tv2"> \n Oblik Venere je gotovo sferan, prečnik iznosi skoro koliko i Zemljin. Planeta se obrće oko Sunca za 224.7 dana. Venera je planeta sa najduzim danom. Zanimljivo je da se sve planete obrću oko svoje ose u istom, direktnom smeru, a Venera je jedina koja rotira u retrogradnom smeru (zapad – istok). Iz ovoga sledi da se Sunce na Veneri “rađa” na zapadu. \n </string>
    <string name="venera_tv3"> \n Venera nema magnetsko polje, a razlog njegovog nepostojanja nije dovoljno poznat, iako se teorijski smatra da je njegov nedostatak posledica ili spore rotacije ili nedostatka konvekcija u jezgru, odnosno u jezgru ne dolazi do stvaranja dinamo efekta. Venera poseduje jedino indukovanu magnetosferu nastalu delovanjem sunčevog magnetskog polja i jona koje su doneli solarni vetrovi. Može se posmatrati kao udarni talas koji se omotova oko određene prepreke (u ovom slučaju ta prepreka je Venera). Indukovanu magnetosferu Venere čine udarni luk, magnetni omotač, magnetopauza i magnetni rep sa magnetnim kolom. \n </string>
    <string name="zemlja_tv1"> Naša planeta je treća od Sunca i peta po veličini. Zemlja je jedinstvena i po drugim osobinama. Ona je jedina planeta bez očiglednih kratera, jedina sa tečnom vodom, jedina sa obiljem kiseonika u atmosferi  i jedina planeta na kojoj se razvio život. Zemlja kruži oko Sunca na  srednjem rastojanju od 149,6 miliona kilometara. Kreće se po elipticnoj putanji, veoma malog ekscentriciteta (e=0,017). Oko Sunca obiđe za 365,2564 dana. \n </string>
    <string name="zemlja_tv2"> \n Za razliku od Merkura i Venere, Zemlja ima jedan prirodni satelit – Mesec. Srednje rastojanje Mesec – Zemlja iznosi oko 384400 kilometara. Masa Zemlje je 81,3 puta veća nego masa njenog pratioca; stoga se centar mase sistema Zemlja – Mesec nalazi unutar Zemlje, i to blize povrsini nego centru Zemlje. \n </string>
    <string name="zemlja_tv3"> \n Zemljino magnetsko polje se može predstaviti kao magnetni dipol, sa dva magnetska pola. Južni magnetski pol se nalazi na 73° severne geografske širine i 100° zapadne geografske dužine, na ostrvu Princa od Velsa, dok se severni magnetski pol nalazi na 70° južne geografske širine i 148° istočne geografske dužine, na Antarktiku - južno od Novog Zelanda. Osa magnetskih polova je nagnuta u odnosu na osu geografskih polova za oko 11°. \n </string>
    <string name="mars_tv1"> Mars, crvena planeta, je četvrta planeta u Sunčevom sistemu, a sedma po veličini. Mars je planeta zemljinog tipa. Naziv je dobio po Marsu, starorimskom božanstvu rata koje je u grčkoj mitologiji poznato pod imenom Ares. Ljudsko biće sve do danas nije kročilo na Mars, ali su slate mnogobrojne svemirske letelice sa Zemlje. \n </string>
    <string name="mars_tv2"> \n Temperaturne razlika između svetlijih i tamnijih područja, uslovljavaju mešanje atmosfere. Vetrovi, koji su pri površini  brzine 10 m/s, podižu čestice prašine do 50 km uvis i prenose ih na udaljenosti od više hiljada kilometara. Vetrovi dostižu brzine do 100 m/s, izazivajući godišnje stotinjak peščanih oluja koje, kada je Mars u perihelu, a vetar i temperatura u svom maksimumu, mogu prekriti celu planetu prašinom. \n </string>
    <string name="mars_tv3"> \n Mars ima dva satelita nepravilnog oblika: Fobos i Deimos koji su plimski blokirani. \n </string>
    <string name="jupiter_tv1"> Jupiter je najveća planeta Sunčevog sistema, peti po redu od Sunca. Posle Venere to je najsjajnija planeta koja se vidi sa Zemlje, tako da je veoma pogodan za posmatranje malim teleskopom. \n </string>
    <string name="jupiter_tv2"> \n Siderički period tj. vreme za koje Jupiter obiđe jedanput oko Sunca iznosi 11,9 zemljskih godina (ili oko 4332 dana). Srednja razdaljina od Sunca iznosi oko 5,20 astronomskih jedinica ili 778 miliona kilometara, dok najbliži prolazak od Zemlje iznosi 3,95 A.J. Jupiter je planeta sa najkracim danom. Ravnotežna temperatura (ona koju bi imao da ga greje samo Sunce) za Jupiter iznosi 140 K, ali je stvarna temperatura njegovih spoljnih delova oko 160 K. To se objašnjava Kelvin-Helmholcovim mehanizmom (potencijalna energija gravitaconog polja sažimanjem prelazi u unutrašnju energiju). \n </string>
    <string name="jupiter_tv3"> \n Za razliku od ostalih, terestričkih planeta, Jupiter ima mnogo prirodnih satelita. Četri najveća se mogu videti sa Zemlje maljim teleskopom (ponekad čak i dvogledom). Oni su poznati kao Galilejevi sateliti, pošto ih je Galilejo Galilej prvi posmatrao u ranom sedamnaestom Jupiter ima ukupno 63 satelita.  Jupiter nam pokazuje diferencijalnu rotaciju tj. da brzina rotacije nije ista na svim tačkama površine. Diferencijalna rotacija nije moguća kod čvrstih nebeskih objekata kao što su terestričke planete, ali je normalno za tečna (fluidna) tela kao što je Jupiter. \n </string>
    <string name="quiz_p1"> 1. Koja je treća planeta Sunčevog sistema? </string>
    <string name="quiz_p2"> \n 2. Prirodni Zemljin satelit se naziva:</string>
    <string name="quiz_p3"> \n 3. Ko je oktrio teleskop? </string>
    <string name="quiz_p4"> \n 4. Gledano sa Zemlje, koja zvezda je najsjanija? </string>
    <string name="quiz_p5"> \n 5. Zvezda Danica je: </string>
    <string name="quiz_p6"> \n 6. Nebeski objekti poznati kao zvezde padalice su: </string>
    <string name="quiz_p7"> \n 7. Koja je planeta najveca u Sunčevom sistemu? </string>
    <string name="quiz_p8"> \n 8. Planeta koja nema ni jedan satelit je: </string>
    <string name="quiz_p9"> \n 9. Koja planeta je poznata po svojim prstenovima? </string>
    <string name="quiz_p10"> \n 10. Čestice hipotetički brže od svetlosti su: </string>
</resources>