<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#000000"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Merkur \n"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/merkur_tv1"
            android:textColor="#ffffff" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/merkur_tv" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/merkur_tv2"
            android:textColor="#ffffff" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="440px"
            android:layout_gravity="center"
            android:src="@drawable/merkur_tv_povrsina" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Površina merkura"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/merkur_tv3"
            android:textColor="#ffffff" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="400px"
            android:layout_gravity="center"
            android:src="@drawable/merkur_tv_gradja" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="1. Kora: 100-300 km \n 2. Mantl 600 km \n 3. Jezgro"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/merkur_tv4"
            android:textColor="#ffffff"
            android:gravity="center" />

    </LinearLayout>

</ScrollView>